--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -37,22 +37,21 @@
 }
 .nav-dropdown {
   width: 80vw;
-  height: 50vh;
+  height: 70vh;
   position: absolute;
   background-color: var(--tertiary-lime);
   z-index: 2;
-  right: 0;
+  left: 0;
   top: 80px;
-  margin-right: 10px;
-  border-radius: 15px;
   text-transform: uppercase;
 }
 .nav-dropdown ul {
+  padding: 20px;
   width: inherit;
-  height: inherit;
+  height: 80%;
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: end;
 }
 .footer-container {
   width: 100vw;
