--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -1,3 +1,5 @@
+/* STYLING FOR CARD WITH TEXT  */
+
 .cardLg-container {
   background-color: var(--dark-primary);
   color: var(--white);
@@ -8,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 10px;
+  margin: 20px;
 }
 .cardLg-image-container {
   width: 100%;
@@ -19,7 +22,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 7px 7px 0 0;
 }
+
+/* STYLING FOR CARD WITH TEXT AT CENTER */
 .cardImage-container {
   position: relative;
   text-align: center;
@@ -28,23 +34,29 @@
   width: 300px;
   border-radius: 25px;
   overflow: hidden;
+  margin: 20px;
 }
-.cardRound-wrapper {
-  text-align: center;
-  height: 200px;
-  width: 200px;
-}
+
 .cardImage-text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-transform: uppercase;
+  margin: 10px;
 }
+/* STYLING FOR ARTIST ROUND CARD WITH TEXT  */
 .cardRound-container {
   color: white;
   height: 200px;
   width: 200px;
   border-radius: 100px;
   overflow: hidden;
+  margin: 20px;
+}
+.cardRound-wrapper {
+  text-align: center;
+  height: 200px;
+  width: 200px;
+  margin: 10px;
 }
