--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -5,12 +5,10 @@
   color: var(--white);
   width: 300px;
   height: 300px;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 10px;
-  margin: 20px;
+  border-radius: 10px;
+  padding: 5px 5px;
+  margin: 5px;
+  display: inline-block;
 }
 .cardLg-image-container {
   width: 100%;
@@ -35,6 +33,7 @@
   border-radius: 25px;
   overflow: hidden;
   margin: 20px;
+  display: inline-block;
 }
 
 .cardImage-text {
@@ -52,11 +51,12 @@
   width: 200px;
   border-radius: 100px;
   overflow: hidden;
-  margin: 20px;
+  margin: 10px;
 }
 .cardRound-wrapper {
   text-align: center;
   height: 200px;
   width: 200px;
   margin: 10px;
+  display: inline-block;
 }
