--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -53,14 +53,22 @@
   justify-content: space-evenly;
   align-items: end;
 }
+.footer-wrapper {
+  margin-top: 20px;
+  padding-top: 20px;
+}
 .footer-container {
   width: 100vw;
-  height: 50vh;
+  height: fit-content;
   background: var(--dark-primary);
   color: var(--white);
-  padding: 20px;
+  padding: 30px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
+
+.outlet-container {
+  height: fit-content;
 }
 .footer-link-container {
   display: flex;
