--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -53,6 +53,11 @@
   overflow: hidden;
   margin: 10px;
 }
+.cardRound-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .cardRound-wrapper {
   text-align: center;
   height: 200px;
