--- a/src/Routes/ExploreMusic/explore-music.route.css
+++ b/src/Routes/ExploreMusic/explore-music.route.css
@@ -3,8 +3,8 @@
   place-items: center;
 }
 .explore-music-container img {
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 40vh;
   object-fit: cover;
   object-position: 10% 50%;
 }
