--- a/src/Routes/Home/Home.styles.css
+++ b/src/Routes/Home/Home.styles.css
@@ -23,13 +23,13 @@ button {
   height: 85%;
   border-radius: 500px;
   overflow: hidden;
-  box-shadow: -5px -5px rgba(217, 217, 217, 0.46);
   margin-top: 80px;
   transition: all 0.5s ease-in-out;
 }
 .image-container img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .top-item {
   position: absolute;
