--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -95,6 +95,9 @@
   display: flex;
   flex-direction: column;
 }
+.outlet-container {
+  margin-top: 10px;
+}
 @media (max-width: 600px) {
   .nav-item {
     display: none;
