--- a/src/components/section/section.styles.css
+++ b/src/components/section/section.styles.css
@@ -1,19 +1,24 @@
 .section-container {
+  display: grid;
+  place-items: center;
   width: 100vw;
   padding: 20px;
+  height: fit-content;
   background-color: var(--white);
 }
 .section-image-container {
   display: grid;
-  place-content: center;
-
+  place-items: center;
   margin: 10px;
   width: 100%;
-  height: 100%;
+  height: 25vh;
+  overflow: hidden;
+  padding: 0 20px;
 }
 .section-image-container img {
-  width: 80%;
+  width: 100%;
   max-height: 100%;
+  object-fit: cover;
 }
 .section-text-container {
   display: grid;
