--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: "Raleway", sans-serif;
-  background-image: linear-gradient(176.09deg, #280e23 41.71%, #4f0c43 78.32%);
+  background-color: #280e23;
 }
 
 img,
