--- a/src/Routes/Dasboard/dashboard.route.css
+++ b/src/Routes/Dasboard/dashboard.route.css
@@ -18,6 +18,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: grid;
 }
 .dashboard-header-text-container {
   position: absolute;
