--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -40,10 +40,16 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-80%, -50%);
   text-transform: uppercase;
-  margin: 10px;
+  /* margin: 10px; */
 }
+.cardImage-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 /* STYLING FOR ARTIST ROUND CARD WITH TEXT  */
 .cardRound-container {
   color: white;
