--- a/src/Routes/ExploreMusic/explore-music.route.css
+++ b/src/Routes/ExploreMusic/explore-music.route.css
@@ -1,14 +1,13 @@
-.header-img-container {
-  display: grid;
-  place-items: center;
+.explore-header-container {
+  width: 100vw;
 }
-.explore-music-container img {
-  width: 100%;
-  height: 40vh;
-  object-fit: cover;
-  object-position: 10% 50%;
-}
+
 .explore-music-header {
   padding: 20px;
   color: var(--white);
+}
+.img-fill {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
