--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -84,3 +84,50 @@
   height: 100%;
   object-fit: cover;
 }
+
+/* styling for cardLargeHome */
+.cardLg-wrapper-home {
+  display: inline-block;
+  background-color: var(--white);
+  width: fit-content;
+  height: fit-content;
+  border-radius: 10px;
+  margin: 5px;
+  color: var(--primary);
+}
+
+.cardLg-container-home {
+  padding: 15px 15px 30px;
+  width: 250px;
+  height: 350px;
+}
+.cardLg-image-container-home {
+  position: relative;
+  width: 100%;
+  height: 70%;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.cardLg-image-container-home img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cardLg-text-container-home {
+  white-space: pre-wrap;
+  width: 100%;
+  font-size: x-small;
+  display: flex;
+  flex-direction: row;
+  padding: 20px 10px 20px;
+  text-align: center;
+  justify-content: center;
+}
+.cardImage-text-home {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  color: white;
+  bottom: 5%;
+  left: 0%;
+}
