--- a/src/Routes/Auths/auth.styles.css
+++ b/src/Routes/Auths/auth.styles.css
@@ -26,12 +26,13 @@
   overflow: hidden;
   margin: 20px;
   border-radius: 15px;
-  width: 70%;
+  width: 518px;
 }
 .auth-image-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  border-image-width: 15px;
 }
 
 .role-selector-container {
@@ -43,7 +44,11 @@
   width: 100vw;
   color: var(--white);
 }
-
+.login-bg {
+  background-image: url("/public/images/login-background.svg");
+  width: 100vw;
+  height: 100vh;
+}
 @media screen and (max-width: 600px) {
   .auth-image-container {
     display: none;
