--- a/src/components/Form/form.styles.css
+++ b/src/components/Form/form.styles.css
@@ -27,12 +27,13 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  outline: 1px solid var(--grey-light);
-  border-radius: 15px;
+  border: 0.5px solid var(--grey-light);
+  border-radius: 10px;
   padding: 0 10px;
 }
 .input-field {
   width: 100%;
+
   background-color: transparent;
   color: var(--white);
   padding: 10px;
