--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -6,21 +6,30 @@
   align-items: center;
   padding: 2rem;
 }
+.logo {
+  width: 95px;
+  height: 37px;
+}
 .nav-m {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
+.nav li {
+  display: flex;
+  align-items: center;
+}
 
 .header-container {
   width: 100vw;
   height: fit-content;
-  padding: 10px;
+  padding-bottom: 20px;
   display: grid;
   place-items: center;
+  background: linear-gradient(176.09deg, #280e23 41.71%, #4f0c43 78.32%);
 }
-.logo {
+.join-btn {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -76,37 +85,57 @@
   justify-content: space-evenly;
   align-items: center;
 }
+.footer-wrapper {
+  width: 100vw;
+}
 
 .footer-container {
-  max-width: 100vw;
-  height: fit-content;
-  background: var(--dark-primary);
+  width: 100vw;
+  height: 40vh;
+  background-size: 100% 100%;
+  background-image: url("/public/images/footerBg.png");
+
   color: var(--white);
-  padding: 10px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  padding: 20px;
 }
 
-.footer-link-container {
-  display: flex;
-  justify-content: space-evenly;
-}
 .footer-list {
   display: flex;
-  flex-direction: column;
 }
+
 .outlet-container {
   margin-top: 10px;
 }
 @media (max-width: 600px) {
+  .svg-round {
+    margin-left: 5px;
+  }
+  .join-btn {
+    width: fit-content;
+    font-size: small;
+    padding: 5px 10px;
+    margin-right: 10px;
+  }
   .nav-item {
     display: none;
   }
   .toggle-icon {
     display: block;
+    display: flex;
+    width: fit-content;
+    align-items: center;
   }
   .footer-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    background-size: 100% 100%;
+    background-position: center;
+    background-image: url("/public/images/mobileFooterBg.png");
+  }
+  .footer-list {
+    flex-direction: column;
+    text-align: left;
   }
 }
