--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -125,9 +125,11 @@
 }
 .cardImage-text-home {
   width: 100%;
+  height: 20%;
   text-align: center;
   position: absolute;
   color: white;
-  bottom: 5%;
-  left: 0%;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.078), rgba(0, 0, 0, 0.447));
 }
