fix typo and adjusted hero image to be more responsive

--- a/src/Routes/Home/Home.styles.css
+++ b/src/Routes/Home/Home.styles.css
@@ -113,8 +113,8 @@ button {
     text-align: center;
   }
   .image-container {
-    width: 130px;
-    height: 272px;
+    width: 35vw;
+    height: 292px;
   }
   .left-item {
     right: 7%;
