--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -31,16 +31,16 @@
 }
 .join-btn {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  background-color: var(--error);
+  background: #ff32788f;
   border: none;
   color: white;
-  padding: 5px 20px;
+  padding: 5px 7px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  width: 170px;
+  width: fit-content;
   border-radius: 20px;
   filter: drop-shadow(0 0 0.75rem #ff32788f);
 }
@@ -57,6 +57,7 @@
   height: 30px;
   border-radius: 50px;
   padding: 2px;
+  margin-left: 10px;
 }
 .toggle-icon {
   display: none;
