--- a/src/Routes/Dasboard/dashboard.route.css
+++ b/src/Routes/Dasboard/dashboard.route.css
@@ -1,94 +1,72 @@
-.bg-black {
-  background: black;
-  color: var(--white);
-}
-/* .dashboard-header-container {
- 
-  height: 100%;
-  width: 100%;
-} */
-.dashboard-header-container {
-  width: 100vw;
-  height: 50vh;
-  overflow: hidden;
-  position: relative;
+.dashboard-wrapper {
+  max-width: 100%;
+  padding: 7px;
 }
 
-.dashboard-image {
+.dashboard-header {
+  display: flex;
+  padding: 20px;
+  flex-wrap: wrap;
+  position: relative;
+}
+.dashboard-header-text {
+  margin-right: 7%;
+}
+.dashboard-header-image {
+  width: 582px;
+  height: 281px;
+  position: relative;
+}
+.btn-dashboard {
+  position: absolute;
+  bottom: -17px;
+  right: 25%;
+  color: var(--white);
+  background-color: #e279f2;
+  width: 50%;
+  border-radius: 15px;
+}
+.dashboard-header-image img {
   width: 100%;
   height: 100%;
+  border-radius: 15px;
   object-fit: cover;
-  display: grid;
 }
-.dashboard-header-text-container {
+.dashboard-deco-image {
+  display: flex;
   position: absolute;
   top: 50%;
-  left: 30px;
-  color: var(--dark-tertiary);
 }
-.dashboard-header-text-container h2 {
-  font-size: 2em;
-  padding-bottom: none;
-  color: var(--error);
+.dashboard-deco-image img {
+  height: 50px;
 }
-
-.dashboard-text-info-container {
-  color: var(--white);
-  padding-top: 10px;
-  background-color: black;
+.left {
+  right: 15%;
 }
-
-.dashboard-text-info {
-  width: fit-content;
-  height: fit-content;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: small;
+.right {
+  left: 10%;
 }
-.dashboard-text-info :nth-child(2) {
-  padding: 10px;
+.dashboard-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+  gap: 100px;
+  height: max-content;
 }
-
-.cardImage-container-dashboard {
-  position: relative;
-  text-align: center;
-  color: white;
-  height: 200px;
-  width: 150px;
-  border-radius: 15px;
-  overflow: hidden;
-  margin: 15px;
-  display: inline-block;
-}
-.cardImage-container-dashboard img {
-  width: 100%;
-  height: 100%;
+.dashboard-footer img {
   object-fit: cover;
 }
-.dashboard-wrapper {
-  color: var(--white);
-  display: grid;
-  width: 100vw;
-  place-items: center;
-}
 
-.cardImage-text-dashboard {
-  position: absolute;
-  bottom: 20px;
-  text-transform: uppercase;
-  /* margin: 10px; */
-}
-.dashboard-section-container {
-  display: flex;
-  justify-content: left;
-  flex-wrap: wrap;
-}
-@media screen and (max-width: 600) {
-  /* .dashboard-section-container {
-    justify-content: flex-start;
-    display: flex;
-    flex-wrap: wrap;
-    float: left;
-  } */
+@media screen and (max-width: 600px) {
+  .dashboard-deco-image {
+    display: none;
+  }
+  .dashboard-footer {
+    grid-template-columns: 1fr;
+    gap: 20px;
+    padding: 10px;
+  }
+  .dashboard-footer img {
+    border-radius: 15px;
+  }
 }
