--- a/src/Routes/Home/Home.styles.css
+++ b/src/Routes/Home/Home.styles.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 100%;
   padding: 40px 10px;
+  text-align: center;
 }
 .hero-container p,
 button {
@@ -19,8 +20,9 @@ button {
   height: 70%;
 }
 .text-container h1 {
-  font-size: 3.2vw;
+  font-size: 250%;
   font-weight: 800;
+  text-transform: uppercase;
 }
 .image-container-wrapper {
   display: grid;
@@ -55,8 +57,9 @@ button {
 }
 .home-text {
   text-align: center;
+  color: var(--white);
   padding: 50px 10px 20px;
-  color: #fff;
+  background: linear-gradient(176.09deg, #280e23 41.71%, #4f0c43 78.32%);
 }
 .card-section {
   overflow: auto;
@@ -90,11 +93,17 @@ button {
   left: 500px;
   bottom: 284px;
 }
-
+.hide {
+  display: none;
+}
 @media screen and (max-width: 600px) {
   .text-container h1 {
     font-size: 6.5vw;
     font-weight: 800;
+  }
+
+  .text-col-grey-light {
+    font-size: 0.7em;
   }
   .image-container-wrapper {
     padding: 50px;
@@ -106,25 +115,38 @@ button {
     left: 20px;
     bottom: 384px;
   }
-  .hide {
-    display: none;
-  }
-  .hero-container {
-    text-align: center;
-  }
+
   .image-container {
-    width: 35vw;
+    width: 120px;
     height: 292px;
   }
-  .left-item {
-    right: 7%;
+}
+@media (min-width: 900px) and (max-width: 720px) {
+  .image-container {
+    width: 35vw;
+    height: 792px;
   }
 }
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1020px) {
   .visible-on-mobile {
     display: none;
   }
-  .logo-container img {
-    width: 50%;
+  .hide {
+    display: block;
+  }
+  .text-col-grey-light {
+    width: 100%;
+    font-size: 0.9em;
+    text-align: justify;
+    word-break: keep-all;
+  }
+  .logo-container {
+    width: 100%;
+  }
+  .text-container h1 {
+    font-size: 200%;
+  }
+  .hero-container {
+    text-align: start;
   }
 }
