--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -38,8 +38,8 @@
 .cardImage-text {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-80%, -50%);
+  right: 25%;
+  /* transform: translate(-80%, -50%); */
   text-transform: uppercase;
   /* margin: 10px; */
 }
