--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -1,13 +1,14 @@
 .nav {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 2rem;
+  color: var(--primary);
 }
 .logo {
-  width: 95px;
+  width: 100%;
   height: 37px;
 }
 .nav-m {
@@ -22,7 +23,7 @@
 }
 
 .header-container {
-  width: 100vw;
+  width: 100%;
   height: fit-content;
   padding-bottom: 20px;
   display: grid;
@@ -63,7 +64,7 @@
   display: none;
 }
 .nav-dropdown {
-  width: 100vw;
+  width: 100%;
   height: 70vh;
   position: absolute;
   background-color: var(--tertiary-lime);
@@ -87,12 +88,12 @@
   align-items: center;
 }
 .footer-wrapper {
-  width: 100vw;
+  width: 100%;
 }
 
 .footer-container {
-  width: 100vw;
-  height: 40vh;
+  width: 100%;
+  height: fit-content;
   background-size: 100% 100%;
   background-image: url("/public/images/footerBg.png");
 
@@ -108,7 +109,7 @@
 }
 
 .outlet-container {
-  margin-top: 10px;
+  min-height: 100vh;
 }
 @media (max-width: 600px) {
   .svg-round {
@@ -131,7 +132,7 @@
   }
   .footer-container {
     grid-template-columns: repeat(1, 1fr);
-    background-size: 100% 100%;
+    background-size: cover;
     background-position: center;
     background-image: url("/public/images/mobileFooterBg.png");
   }
