--- a/src/components/section/section.styles.css
+++ b/src/components/section/section.styles.css
@@ -1,7 +1,7 @@
 .section-container {
   display: grid;
   place-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 20px;
   height: fit-content;
   background-color: var(--white);
@@ -32,7 +32,7 @@
   color: var(--primary);
   background-color: #fff;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   height: fit-content;
   display: grid;
   place-items: center;
