--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -93,19 +93,19 @@
 
 .footer-container {
   width: 100%;
-  height: fit-content;
+
+  min-height: 300px;
   background-size: 100% 100%;
   background-image: url("/public/images/footerBg.png");
-
   color: var(--white);
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   align-items: center;
-  padding: 20px;
 }
 
 .footer-list {
   display: flex;
+  align-items: center;
 }
 
 .outlet-container {
@@ -132,12 +132,11 @@
   }
   .footer-container {
     grid-template-columns: repeat(1, 1fr);
-    background-size: cover;
-    background-position: center;
     background-image: url("/public/images/mobileFooterBg.png");
   }
   .footer-list {
     flex-direction: column;
-    text-align: left;
+    align-items: start;
+    color: var(--white);
   }
 }
