--- a/src/Routes/Home/Home.styles.css
+++ b/src/Routes/Home/Home.styles.css
@@ -41,6 +41,9 @@ button {
   transition: all 0.5s ease-in-out;
   box-shadow: -5px -8px #d9d9d975;
 }
+.image-container-purple {
+  box-shadow: -5px -8px #e279f2;
+}
 .image-container img {
   width: 100%;
   height: 100%;
@@ -75,7 +78,7 @@ button {
   background: #fff;
 }
 .logo-container img {
-  width: 70%;
+  width: 50%;
 
   align-self: center;
 }
@@ -96,6 +99,12 @@ button {
 .hide {
   display: none;
 }
+.testimony-header-container {
+  background-color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+
 @media screen and (max-width: 600px) {
   .text-container h1 {
     font-size: 6.5vw;
@@ -119,6 +128,9 @@ button {
   .image-container {
     width: 120px;
     height: 292px;
+  }
+  .logo-container img {
+    width: 80%;
   }
 }
 @media (min-width: 900px) and (max-width: 720px) {
