--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -99,13 +99,15 @@
   background-image: url("/public/images/footerBg.png");
   color: var(--white);
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   align-items: center;
+  padding: 25px 0px;
 }
 
 .footer-list {
   display: flex;
   align-items: center;
+  height: 80%;
 }
 
 .outlet-container {
@@ -131,12 +133,15 @@
     align-items: center;
   }
   .footer-container {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     background-image: url("/public/images/mobileFooterBg.png");
   }
   .footer-list {
     flex-direction: column;
     align-items: start;
     color: var(--white);
+  }
+  .footer-socials {
+    flex-direction: row;
   }
 }
