--- a/src/components/carousel/carousel.syles.css
+++ b/src/components/carousel/carousel.syles.css
@@ -12,6 +12,7 @@
   overflow: auto;
   white-space: nowrap;
   scroll-snap-type: x proximity;
+  scroll-snap-stop: always;
 }
 .carousel-wrapper ::-webkit-scrollbar {
   display: none;
