--- a/src/components/slider/slider.styles.css
+++ b/src/components/slider/slider.styles.css
@@ -2,16 +2,21 @@
   display: inline-block;
   align-items: center;
   justify-content: center;
-  height: 45vh;
   color: #fff;
   width: 100%;
-  overflow: hidden;
+  height: 100%;
 }
 .slider-carousel {
-  overflow: hidden;
+  overflow-y: hidden;
   position: relative;
   background-color: #fff;
+  display: flex;
+  height: max-content;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 0;
 }
+
 .inner {
   white-space: nowrap;
   transition: transform 0.3s;
@@ -19,13 +24,13 @@
 .slider-btn-wrapper {
   position: absolute;
   display: flex;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   bottom: 0;
   padding: 10px;
 }
 .slider-btn-container {
-  width: 20%;
+  width: 50%;
   display: flex;
   justify-content: space-around;
 }
@@ -39,7 +44,4 @@
   font-size: medium;
 }
 @media screen and (max-width: 900px) {
-  .slider-carousel-item {
-    height: 45vh;
-  }
 }
