--- a/src/components/Layout/HomeSectionLayout/HomeLayout.css
+++ b/src/components/Layout/HomeSectionLayout/HomeLayout.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
+  height: fit-content;
 }
 .home-layout-container {
   display: flex;
